# sattebaaz

./: .env.example  .gitignore  Cargo.toml  README.md
data_bot/: EC2_SETUP.md  app.py  collector.py  requirements.txt
data_bot/templates/: dashboard.html
docs/: 01_MARKET_STRUCTURE.md  02_CORE_STRATEGY.md  03_STRATEGIES.md  04_RISK_AND_EXECUTION.md  05_ARCHITECTURE.md
src/: config.rs  lib.rs  main.rs
src/execution/: batch_submitter.rs  clob_auth.rs  clob_client.rs  fill_tracker.rs  mod.rs  order_builder.rs  polygon_merger.rs
src/feeds/: binance.rs  market_discovery.rs  mod.rs  polymarket.rs  user_ws.rs
src/models/: candle.rs  market.rs  mod.rs  order.rs  position.rs  signal.rs
src/risk/: mod.rs  position_manager.rs  risk_manager.rs  sizing.rs
src/signals/: arb_scanner.rs  bias.rs  compression.rs  mod.rs  momentum.rs  probability.rs  realtime_vol.rs  volatility.rs
src/strategies/: lag_exploit.rs  market_maker.rs  mod.rs  momentum_capture.rs  orchestrator.rs  pure_arb.rs  straddle_bias.rs
src/telemetry/: alerts.rs  latency.rs  mod.rs  pnl.rs
tests/: backtest.rs
